# energy-matching-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0bb3f0fa464f_initial_schema.py  0f179db933d6_add_meters.py  2440c428ccf6_add_time_slot_to_gen_consumption.py  2c249216f1ac_add_windfarm_feed_in_price_per_kwh.py  7e04a6368520_add_trec_batches.py  fa6b9882de2c_add_customer_green_target.py
app/: __init__.py  data.py  main.py  matching.py  models.py
app/api/: deps.py
app/api/v1/: analytics.py  consumption.py  contracts.py  customers.py  generation.py  health.py  live.py  matching.py  router.py  trecs.py  wind_farms.py
app/core/: config.py  exceptions.py
app/db/: base.py  session.py
app/ingestion/: _http.py  csv_importer.py  parsing.py  sources.py  taipower.py  taipower_live.py
app/matching/: __init__.py  engine.py  optimizer.py  slot_engine.py  slot_optimizer.py  tou.py
app/models/: __init__.py  consumption.py  contract.py  customer.py  enums.py  generation.py  matching.py  meter.py  trec.py  wind_farm.py
app/repositories/: base.py
app/schemas/: analytics.py  common.py  consumption.py  contract.py  customer.py  customer_optimization.py  evaluation.py  generation.py  investment.py  live.py  matching.py  meter.py  optimization.py  recommendation.py  risk.py  settlement.py  slot_matching.py  trec.py  wind_farm.py
app/services/: analytics_service.py  contracts.py  customer_optimization_service.py  customers.py  evaluation.py  investment_service.py  matching_service.py  measurements.py  meter_service.py  optimize_service.py  recommendation_service.py  risk_service.py  settlement_service.py  slot_matching_service.py  trec_service.py  wind_farms.py
app/static/: dashboard.html
dashboard/: Home.py  api_client.py  總覽.py
dashboard/pages/: 1_Wind_Farms.py  1_風場.py  2_Customers.py  2_企業客戶.py  3_Contracts.py  3_綠電合約.py  4_Matching.py  4_媒合.py  5_Live_Renewables.py  5_即時再生能源.py  6_Evaluation.py  6_售電評估.py  7_Optimization.py  7_最佳化媒合.py  8_時段媒合.py
data/: sample_data.json
data/sample/: consumption.csv  contracts.csv  contracts_taipower.csv  customers.csv  generation.csv  meters.csv  wind_farms.csv
data/taipower/: .gitignore
docs/: api.md  architecture.md  assumptions.md  data-model.md  deployment-cloudrun.md  deployment.md  domain-model.md  env.txt  matching-rules.md  roadmap.md
docs/superpowers/plans/: 2026-07-16-green-power-retailer-evaluation-p1p2.md  2026-07-16-p3-optimization-matching.md  2026-07-17-p4a-timeslot-tou-matching.md  2026-07-20-contract-risk-alerts.md  2026-07-20-multi-meter-sites.md  2026-07-20-p5-transfer-settlement-bill.md  2026-07-20-re-target-recommendations.md  2026-07-20-trec-tracking.md
docs/superpowers/specs/: 2026-07-15-taipower-wind-adapter-design.md  2026-07-16-green-power-retailer-evaluation-p1p2-design.md  2026-07-16-p3-optimization-matching-design.md  2026-07-16-taipower-live-renewables-design.md  2026-07-17-p4a-timeslot-tou-matching-design.md  2026-07-17-static-spa-frontend-design.md  2026-07-17-v1.1-unified-customer-optimization-design.md  2026-07-18-p4b-slot-optimizer-secondary-matching-design.md  2026-07-20-contract-risk-alerts-design.md  2026-07-20-multi-meter-sites-design.md  2026-07-20-p5-transfer-settlement-bill-design.md  2026-07-20-re-target-recommendations-design.md  (+1 more)
scripts/: demo.py  deploy_cloudrun.sh  generate_meter_profiles.py  generate_sample_data.py  generate_slot_profiles.py  seed.py  seed_taipower_contracts.py  seed_taipower_demand.py  start-api.sh  start-dashboard.sh
tests/: conftest.py  test_api.py  test_matching.py
tests/integration/: test_api.py  test_customer_green_target.py  test_customer_optimization.py  test_evaluation_api.py  test_investment.py  test_investment_api.py  test_live_api.py  test_matching_service.py  test_meter.py  test_meter_api.py  test_meter_model.py  test_meter_profiles.py  test_optimize_api.py  test_optimize_service.py  test_recommendation.py  test_recommendation_api.py  test_risk.py  test_risk_api.py  test_settlement.py  test_settlement_api.py  test_slot_matching_api.py  test_slot_matching_service.py  test_slot_profiles.py  test_spa_static.py  test_taipower_contracts.py  test_taipower_demand.py  test_taipower_ingest.py  test_time_slot_column.py  test_trec.py  test_trec_api.py  test_trec_model.py  test_windfarm_feed_in.py
tests/unit/: test_config_database_url.py  test_config_economics.py  test_config_settlement.py  test_evaluation.py  test_matching_engine.py  test_optimizer.py  test_slot_engine.py  test_slot_optimizer.py  test_taipower_live.py  test_taipower_source.py  test_tou.py
web/: api.js  app.js  index.html  styles.css
