[project]
name = "energy-matching-platform"
version = "0.2.0"
description = "MVP for wind power data management, renewable energy contracts, green energy allocation, and RE target analytics in Taiwan."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Austin Hung" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.9",
    # Taipower open-data fetchers: the adapter's --fetch and the live endpoint.
    "httpx>=0.27",
    # P3 economic optimizer: MILP via PuLP (bundles the CBC solver binary).
    "pulp>=2.8",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.33",
    "pandas>=2.2",
    "requests>=2.31",
    "altair>=5.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "app", "app.core", "app.db", "app.models", "app.schemas",
    "app.repositories", "app.services", "app.matching", "app.ingestion",
    "app.api", "app.api.v1",
]

# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app.matching", "app.services"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
